word wrap fix

--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,6 @@ form a {
 }
 .list-answer-text {
   margin-bottom: 0;
-  word-break: break-all;
   font-size: 20px;
 }
 .team-answer-header {
